add citations-js locales/styles in /scripts + on-demand fetching of missing locale/style (#498)

--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,10 @@ public/config.json
 /build
 
 # static files
-/public/scripts/
+/public/scripts/*
+!/public/scripts/citation-js/
+/public/scripts/citation-js/*
+!/public/scripts/citation-js/*
 
 # misc
 .DS_Store
