--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
       "@turf/meta": "^6.0.2",
       "array-move": "^2.1.0",
       "auth0-js": "^9.6.1",
+      "citation-js": "^0.5.1",
       "downloadjs": "^1.4.7",
       "formdata-polyfill": "^3.0.11",
       "google-maps": "^3.3.0",
