--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
    "version": "0.1.0",
    "private": true,
    "dependencies": {
+      "@babel/plugin-syntax-jsx": "^7.14.5",
       "@dbmdz/mirador-keyboardnavigation": "^1.1.0",
       "@fortawesome/fontawesome-svg-core": "^1.2.15",
       "@fortawesome/free-solid-svg-icons": "^5.7.2",
@@ -102,7 +103,6 @@
       "@babel/plugin-proposal-throw-expressions": "^7.0.0",
       "@babel/plugin-syntax-dynamic-import": "^7.2.0",
       "@babel/plugin-syntax-import-meta": "^7.0.0",
-      "@babel/polyfill": "^7.0.0",
       "@babel/preset-env": "^7.0.0",
       "@babel/preset-flow": "^7.0.0",
       "@babel/preset-react": "^7.0.0",
@@ -121,7 +121,7 @@
       "jest-localstorage-mock": "^2.4.0",
       "json-server": "^0.14.0",
       "prettier": "^1.16.4",
-      "react-scripts": "^2.1.5",
+      "react-scripts": "3.4.3",
       "redux-test-utils": "^0.3.0",
       "tcp-port-used": "^0.1.2",
       "whatwg-fetch": "^3.0.0"
