--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ public/config.json
 
 # static files
 /public/scripts/*
+!/public/scripts/silent_callback.html
 !/public/scripts/citation-js/
 /public/scripts/citation-js/*
 !/public/scripts/citation-js/*
