--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
       "google-maps": "^3.3.0",
       "google-maps-react": "^2.0.0",
       "hanzi-tsconv": "^0.1.1",
+      "html-entities": "^2.3.2",
       "html-react-parser": "^1.2.7",
       "i18next": "^19.4.5",
       "i18next-redux-saga": "git+https://github.com/alexiusp/i18next-redux-saga.git",
@@ -83,7 +84,7 @@
       "postinstall": "yarn cp-mirador-to-public && yarn link-embed-iframe && yarn deploy-budax",
       "prebuild": "yarn run generate-build-meta",
       "generate-build-meta": "./node_modules/react-clear-cache/bin/cli.js",
-      "deploy-budax":"budax=$(pwd); if [ -d $budax/../budax/ ] ; then budax=$budax/../budax/ ; elif [ -d $budax/../../budax/ ] ; then budax=$budax/../../budax/ ; else budax=\"\" ; fi ; if [ \"$budax\" != \"\" ] ; then cd public/static/ && rm budax/ -rf && cp -rf $budax . && find budax/ -name \"*.html\" | while read fic ; do base=$(basename \"$fic\" .html); dir=$(dirname \"$fic\"); cp -f \"$fic\" \"$dir\"/\"$base\".en.html ; cp -f \"$fic\" \"$dir\"/\"$base\".bo.html ; cp -f \"$fic\" \"$dir\"/\"$base\".zh.html ; done ; cd ../scripts ; ln -nsf ../static . ; else echo \"budax missing in root dir\" ; fi"
+      "deploy-budax": "budax=$(pwd); if [ -d $budax/../budax/ ] ; then budax=$budax/../budax/ ; elif [ -d $budax/../../budax/ ] ; then budax=$budax/../../budax/ ; else budax=\"\" ; fi ; if [ \"$budax\" != \"\" ] ; then cd public/static/ && rm budax/ -rf && cp -rf $budax . && find budax/ -name \"*.html\" | while read fic ; do base=$(basename \"$fic\" .html); dir=$(dirname \"$fic\"); cp -f \"$fic\" \"$dir\"/\"$base\".en.html ; cp -f \"$fic\" \"$dir\"/\"$base\".bo.html ; cp -f \"$fic\" \"$dir\"/\"$base\".zh.html ; done ; cd ../scripts ; ln -nsf ../static . ; else echo \"budax missing in root dir\" ; fi"
    },
    "devDependencies": {
       "@babel/cli": "^7.0.0",
