--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
       "react-ga": "^2.7.0",
       "react-i18next": "^11.7.3",
       "react-infinite-scroller": "^1.1.4",
+      "react-lazyload": "^3.2.0",
       "react-leaflet": "^2.0.1",
       "react-leaflet-google": "https://github.com/danieldunderfelt/react-leaflet-google.git",
       "react-leaflet-portal": "^0.1.11",
