--- a/package.json
+++ b/package.json
@@ -76,7 +76,7 @@
    "scripts": {
       "start": "react-scripts start",
       "build": "react-scripts build",
-      "postbuild": "touch prod && mv prod old_prod && cp -r build prod && rm -rf old_prod",
+      "postbuild": "yarn run patch-build && touch prod && mv prod old_prod && cp -r build prod && rm -rf old_prod",
       "test": "react-scripts test --env=jsdom",
       "eject": "react-scripts eject",
       "flow": "flow",
@@ -86,7 +86,8 @@
       "prebuild": "yarn run generate-build-meta",
       "generate-build-meta": "./node_modules/react-clear-cache/bin/cli.js",
       "deploy-budax": "budax=$(pwd); if [ -d $budax/../budax/ ] ; then budax=$budax/../budax/ ; elif [ -d $budax/../../budax/ ] ; then budax=$budax/../../budax/ ; else budax=\"\" ; fi ; if [ \"$budax\" != \"\" ] ; then cd public/static/ && rm budax/ -rf && cp -rf $budax . && find budax/ -name \"*.html\" | while read fic ; do base=$(basename \"$fic\" .html); dir=$(dirname \"$fic\"); cp -f \"$fic\" \"$dir\"/\"$base\".en.html ; cp -f \"$fic\" \"$dir\"/\"$base\".bo.html ; cp -f \"$fic\" \"$dir\"/\"$base\".zh.html ; done ; cd ../scripts ; ln -nsf ../static . ; else echo \"budax missing in root dir\" ; fi",
-      "update-budax": "cd /tmp ; unzip budax-master.zip ; cd /usr/local ; sudo rm -rf budax-old/ ; sudo mv budax budax-old ; sudo mv /tmp/budax-master budax ; cd pdl-dev ; sudo ./update.sh master"
+      "update-budax": "cd /tmp ; unzip budax-master.zip ; cd /usr/local ; sudo rm -rf budax-old/ ; sudo mv budax budax-old ; sudo mv /tmp/budax-master budax ; cd pdl-dev ; sudo ./update.sh master",
+      "patch-build": "bash ./public/scripts/patch-build.sh"
    },
    "devDependencies": {
       "@babel/cli": "^7.0.0",
