--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
       "auth0-js": "^9.6.1",
       "citation-js": "^0.5.1",
       "downloadjs": "^1.4.7",
+      "edtf": "^4.1.0",
       "formdata-polyfill": "^3.0.11",
       "google-maps": "^3.3.0",
       "google-maps-react": "^2.0.0",
