--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
       "mirador": "https://github.com/buda-base/mirador#2.7.0-bdrc",
       "pinyin4js": "^1.3.18",
       "query-string": "^5.1.0",
+      "rdflib": "^2.2.18",
       "react": "^16.2.0",
       "react-bootstrap": "^0.31.2",
       "react-clear-cache": "^1.2.0",
