--- a/public/static/transifex.yml
+++ b/public/static/transifex.yml
@@ -1,8 +1,19 @@
 git:
   filters:
-    - filter_type: dir
+    - filter_type: file
       file_format: HTML
-      source_file_extension: html
       source_language: en
-      source_file_dir: public/static
+      source_file: public/static/aboutkm.en.html
+      translation_files_expression: 'public/static/aboutkm.<lang>.html'
+
+    - filter_type: file
+      file_format: HTML
+      source_language: en
+      source_file: public/static/about.en.html
       translation_files_expression: 'public/static/about.<lang>.html'
+
+    - filter_type: file
+      file_format: HTML
+      source_language: en
+      source_file: public/static/resources.en.html
+      translation_files_expression: 'public/static/resources.<lang>.html'
