--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
       "array-move": "^2.1.0",
       "auth0-js": "^9.6.1",
       "citation-js": "^0.5.1",
+      "dms-to-decimal": "^0.0.6",
       "downloadjs": "^1.4.7",
       "edtf": "https://github.com/buda-base/edtf.js",
       "formdata-polyfill": "^3.0.11",
