updgrade react-leaflet & add MarkerClusterGroups (#708)

--- a/package.json
+++ b/package.json
@@ -52,9 +52,9 @@
       "react-i18next": "^11.7.3",
       "react-infinite-scroller": "^1.1.4",
       "react-lazyload": "^3.2.0",
-      "react-leaflet": "^2.0.1",
-      "react-leaflet-google": "https://github.com/danieldunderfelt/react-leaflet-google.git",
-      "react-leaflet-portal": "^0.1.11",
+      "react-leaflet": "^3.0.0",
+      "react-leaflet-cluster": "^1.0.3",
+      "react-leaflet-google-layer": "^2.0.0",
       "react-load-script": "^0.0.6",
       "react-loader": "^2.4.2",
       "react-new-window": "^0.0.7",
