--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
       "@fortawesome/react-fontawesome": "^0.1.4",
       "@material-ui/core": "^1.4.2",
       "@material-ui/icons": "^2.0.0",
+      "@quentin-sommer/react-useragent": "^3.1.1",
       "@sanskrit-coders/sanscript": "^1.0.2",
       "@turf/bbox": "^6.0.1",
       "@turf/meta": "^6.0.2",
@@ -90,7 +91,7 @@
       "deploy-budax": "budax=$(pwd); if [ -d $budax/../budax/ ] ; then budax=$budax/../budax/ ; elif [ -d $budax/../../budax/ ] ; then budax=$budax/../../budax/ ; else budax=\"\" ; fi ; if [ \"$budax\" != \"\" ] ; then cd public/static/ && rm budax/ -rf && cp -rf $budax . && find budax/ -name \"*.html\" | while read fic ; do base=$(basename \"$fic\" .html); dir=$(dirname \"$fic\"); cp -f \"$fic\" \"$dir\"/\"$base\".en.html ; cp -f \"$fic\" \"$dir\"/\"$base\".bo.html ; cp -f \"$fic\" \"$dir\"/\"$base\".zh.html ; done ; cd ../scripts ; ln -nsf ../static . ; else echo \"budax missing in root dir\" ; fi",
       "update-budax": "cd /tmp ; unzip budax-master.zip ; cd /usr/local ; sudo rm -rf budax-old/ ; sudo mv budax budax-old ; sudo mv /tmp/budax-master budax ; cd pdl-dev ; sudo ./update.sh master",
       "patch-build": "bash ./public/scripts/patch-build.sh",
-      "mirador-translations":"for i in src/translations/*json ; do tr=public/scripts/mirador/locales/$(basename $i .json)/translation.json ; echo \"{\" > $tr ; cat $i | grep \"\\\"viewer\\\":\" -A 10000 | grep -v \"[\\{\\}]\" >> $tr ; echo \"}\" >> $tr ; echo $i ok ; done"
+      "mirador-translations": "for i in src/translations/*json ; do tr=public/scripts/mirador/locales/$(basename $i .json)/translation.json ; echo \"{\" > $tr ; cat $i | grep \"\\\"viewer\\\":\" -A 10000 | grep -v \"[\\{\\}]\" >> $tr ; echo \"}\" >> $tr ; echo $i ok ; done"
    },
    "devDependencies": {
       "@babel/cli": "^7.0.0",
