--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
       "react-select": "^5.2.1",
       "react-social-icons": "^4.1.0",
       "react-sortable-hoc": "^1.10.1",
+      "react-swipeable": "^7.0.0",
       "react-tabs": "^3.1.0",
       "react-test-renderer": "^16.8.2",
       "redux": "^3.7.2",
