--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
       "jsewts": "^1.0.3",
       "leaflet": "^1.7.1",
       "leaflet-gesture-handling": "^1.2.1",
+      "leaflet.markercluster.freezable": "^1.0.0",
       "lodash": "^4.17.10",
       "logdown": "^3.3.1",
       "material-colors": "^1.2.5",
