--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
       "react-cookie-consent": "^5.0.1",
       "react-copy-to-clipboard": "^5.0.1",
       "react-dom": "^16.2.0",
-      "react-ga": "^2.7.0",
+      "react-ga4": "^2.0.0",
       "react-i18next": "^11.7.3",
       "react-infinite-scroller": "^1.1.4",
       "react-lazyload": "^3.2.0",
