--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
       "mirador": "https://github.com/buda-base/mirador#2.7.0-bdrc",
       "pinyin4js": "^1.3.18",
       "query-string": "^5.1.0",
+      "rangy": "^1.3.1",
       "rdflib": "^2.2.18",
       "react": "^16.2.0",
       "react-bootstrap": "^0.31.2",
