--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
       "redux-actions": "^2.2.1",
       "redux-devtools-extension": "^2.13.2",
       "redux-saga": "^0.16.0",
+      "resize-observer-polyfill": "^1.5.1",
       "simplebar-react": "^2.3.6",
       "tibetan-sort-js": "^2.1.3"
    },
