--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
       "google-maps-react": "^2.0.0",
       "hanzi-tsconv": "^0.1.1",
       "html-react-parser": "^1.2.7",
+      "hunspell-bo": "https://github.com/eroux/hunspell-bo",
       "i18next": "^19.4.5",
       "i18next-redux-saga": "git+https://github.com/alexiusp/i18next-redux-saga.git",
       "interweave": "^12.6.0",
@@ -81,7 +82,8 @@
       "redux-saga": "^0.16.0",
       "resize-observer-polyfill": "^1.5.1",
       "simplebar-react": "^2.3.6",
-      "tibetan-sort-js": "^2.1.3"
+      "tibetan-sort-js": "^2.1.3",
+      "typo-js": "^1.2.3"
    },
    "scripts": {
       "start": "react-scripts start",
