--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
       "@sanskrit-coders/sanscript": "^1.0.2",
       "@turf/bbox": "^6.0.1",
       "@turf/meta": "^6.0.2",
+      "analytics": "^0.8.11",
       "array-move": "^2.1.0",
       "auth0-js": "^9.6.1",
       "axios": "^0.27.2",
