--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
       "@material-ui/icons": "^2.0.0",
       "@quentin-sommer/react-useragent": "^3.1.1",
       "@sanskrit-coders/sanscript": "^1.0.2",
+      "@searchkit/api": "^4.12.0",
+      "@searchkit/instantsearch-client": "^4.13.0",
       "@turf/bbox": "^6.0.1",
       "@turf/meta": "^6.0.2",
       "analytics": "^0.8.11",
@@ -59,6 +61,8 @@
       "react-helmet": "^6.1.0",
       "react-i18next": "^11.7.3",
       "react-infinite-scroller": "^1.1.4",
+      "react-instantsearch": "^7.11.0",
+      "react-instantsearch-dom": "^6.40.4",
       "react-lazyload": "^3.2.0",
       "react-leaflet": "^3.0.0",
       "react-leaflet-cluster": "^1.0.3",
@@ -82,6 +86,7 @@
       "redux-devtools-extension": "^2.13.2",
       "redux-saga": "^0.16.0",
       "resize-observer-polyfill": "^1.5.1",
+      "searchkit": "^4.12.0",
       "simplebar-react": "^2.3.6",
       "tibetan-sort-js": "^2.1.3",
       "typo-js": "^1.2.3"
